@@ -1,5 +1,13 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+import com.jetbrains.rd.generator.gradle.RdGenExtension
+import com.jetbrains.rd.generator.gradle.RdGenTask
+import org.gradle.kotlin.dsl.register
+
 plugins {
     id("usvm.kotlin-conventions")
+    id(Plugins.Shadow)
+    id(Plugins.RdGen)
+    kotlin("plugin.serialization") version "2.1.21"
 }
 
 repositories {
@@ -20,12 +28,47 @@ dependencies {
     implementation(project(":usvm-jvm:usvm-jvm-util"))
     implementation(project(":usvm-jvm:usvm-jvm-api"))
 
+    implementation(Libs.rd_framework)
+    implementation(Libs.rd_core)
+    compileOnly(Libs.rd_gen)
+
     implementation(Libs.jacodb_api_jvm)
     implementation(Libs.jacodb_core)
     implementation(Libs.jacodb_approximations)
-
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.1")
+    implementation("commons-cli:commons-cli:1.5.0")
     implementation(Libs.logback)
+    implementation(Libs.kotlinx_coroutines_core)
 }
+
+val sourcesBaseDir = projectDir.resolve("src/main/kotlin")
+
+val generatedPackage = "org.usvm.jvm.spring.models"
+val generatedModelsPackage = "org.usvm.jmv.spring.models"
+val generatedModelsSourceDir = sourcesBaseDir.resolve(generatedPackage.replace('.', '/'))
+
+val generateModels = tasks.register<RdGenTask>("generateAnalysisProtocolModels") {
+//    dependsOn.addAll(listOf("compileKotlin"))
+    val rdParams = extensions.getByName("params") as RdGenExtension
+    val sourcesDir = projectDir.resolve("src/main/kotlin").resolve("org/usvm/jvm/spring/models")
+
+    group = "rdgen"
+    rdParams.verbose = true
+    rdParams.sources(sourcesDir)
+    rdParams.hashFolder = layout.buildDirectory.file("rdgen/hashes").get().asFile.absolutePath
+    // where to search roots
+    rdParams.packages = "org.usvm.jvm.spring.models"
+
+    rdParams.generator {
+        language = "kotlin"
+        transform = "symmetric"
+        root = "org.usvm.jvm.spring.models.definitions.AnalysisProcessRoot"
+
+        directory = generatedModelsSourceDir.absolutePath
+        namespace = generatedModelsPackage
+    }
+}
+
 
 val usvmApiJarConfiguration by configurations.creating
 dependencies {
@@ -55,15 +98,13 @@ val springVersion = "3.5.0"
 val springSecurityVersion = "6.5.0"
 val junitVersion = "5.3.1"
 
-dependencies {
+//dependencies {
 //    implementation("org.springframework.boot:spring-boot-starter-web:$springVersion")
 //    implementation("org.springframework.boot:spring-boot-starter-test:$springVersion")
 //    implementation("org.springframework.boot:spring-boot-starter-data-jpa:$springVersion")
-//    implementation("org.springframework.security:spring-security-test:$springSecurityVersion")
 //    implementation("org.apache.xmlbeans:xmlbeans:5.2.1")
 //    implementation("org.springframework.boot:spring-boot-starter-thymeleaf:$springVersion")
-//    implementation("org.usvm.approximations.java.stdlib:approximations:0.0.0")
-}
+//}
 
 val springTestDeps by configurations.creating
 
@@ -80,6 +121,161 @@ fun createOrClear(file: File) {
         file.mkdirs()
     }
 }
+
+java {
+    withSourcesJar()
+}
+
+fun buildAddOpens(): List<String> {
+    val javaBasePackages = listOf (
+        "jdk.internal.misc",
+        "java.lang",
+        "java.lang.reflect",
+        "sun.security.provider",
+        "jdk.internal.event",
+        "jdk.internal.jimage",
+        "jdk.internal.jimage.decompressor",
+        "jdk.internal.jmod",
+        "jdk.internal.jtrfs",
+        "jdk.internal.loader",
+        "jdk.internal.logger",
+        "jdk.internal.math",
+        "jdk.internal.misc",
+        "jdk.internal.module",
+        "jdk.internal.org.objectweb.asm.commons",
+        "jdk.internal.org.objectweb.asm.signature",
+        "jdk.internal.org.objectweb.asm.tree",
+        "jdk.internal.org.objectweb.asm.tree.analysis",
+        "jdk.internal.org.objectweb.asm.util",
+        "jdk.internal.org.xml.sax",
+        "jdk.internal.org.xml.sax.helpers",
+        "jdk.internal.perf",
+        "jdk.internal.platform",
+        "jdk.internal.ref",
+        "jdk.internal.reflect",
+        "jdk.internal.util",
+        "jdk.internal.util.jar",
+        "jdk.internal.util.xml",
+        "jdk.internal.util.xml.impl",
+        "jdk.internal.vm",
+        "jdk.internal.vm.annotation",
+        "java.util.concurrent.atomic",
+        "java.io",
+        "java.util.zip",
+        "java.util.concurrent",
+        "sun.security.util",
+        "java.lang.invoke",
+        "java.lang.ref",
+        "java.lang.constant",
+        "java.util",
+        "java.util.concurrent.locks",
+        "java.nio.charset",
+        "java.util.regex",
+        "java.net",
+        "sun.util.locale",
+        "java.util.stream",
+        "java.security",
+        "java.time",
+        "jdk.internal.access",
+        "sun.reflect.annotation",
+        "sun.reflect.generics.reflectiveObjects",
+        "sun.reflect.generics.factory",
+        "sun.reflect.generics.tree",
+        "sun.reflect.generics.scope",
+        "sun.invoke.util",
+        "sun.nio.cs",
+        "sun.nio.fs",
+        "java.nio",
+        "java.time.format",
+        "java.time.zone",
+        "java.time.temporal",
+        "java.text",
+        "sun.util.calendar",
+        "sun.net.www.protocol.jar",
+        "java.util.jar",
+        "java.nio.file.attribute",
+        "java.util.function",
+        "java.math",
+        "java.nio.file",
+        "java.nio.channels",
+        "javax.net.ssl",
+        "java.lang.annotation",
+        "java.lang.runtime",
+        "javax.crypto",
+        "java.nio.file.spi",
+        "jdk.internal.jrtfs",
+        "sun.nio.ch",
+        "sun.net.util",
+    )
+
+    val javaBaseAddOpens = javaBasePackages.map {
+        packageEntry("java.base", it)
+    }
+
+    val misc = listOf(
+        packageEntry("java.management", "javax.management"),
+        packageEntry("java.logging", "java.util.logging"),
+        packageEntry("java.desktop", "java.beans"),
+        packageEntry("java.xml", "com.sun.org.apache.xerces.internal.impl.xs"),
+        packageEntry("jdk.zipfs", "jdk.nio.zipfs"),
+        packageEntry("java.instrument", "sun.instrument"),
+        packageEntry("java.xml", "com.sun.xml.internal.stream"),
+        packageEntry("java.xml", "com.sun.org.apache.xerces.internal.impl"),
+        packageEntry("java.xml", "com.sun.org.apache.xerces.internal.utils"),
+        packageEntry("java.sql", "java.sql"),
+    )
+
+
+    return javaBaseAddOpens + misc
+}
+
+fun buildAddExports(): List<String> {
+    return listOf(
+        packageEntry("java.base", "jdk.internal.access.foreign"),
+        packageEntry("java.base", "sun.security.action"),
+        packageEntry("java.base", "sun.util.locale"),
+        packageEntry("java.base", "jdk.internal.misc"),
+        packageEntry("java.base", "jdk.internal.reflect"),
+        packageEntry("java.base", "sun.nio.cs"),
+        packageEntry("java.xml", "com.sun.org.apache.xerces.internal.impl.xs.util"),
+        packageEntry("java.base", "jdk.internal.loader")
+    )
+}
+
+fun openPackageEntry(module: String, pkg: String): String = "$module/$pkg=ALL-UNNAMED"
+
+fun packageEntry(module: String, pkg: String): String = "$module/$pkg"
+
+val addOpensPool: List<String> = buildAddOpens()
+val addExportsPool: List<String> = buildAddExports()
+
+val springRunnerJar = tasks.register<ShadowJar>("springJar") {
+    group = "jar"
+    version = "1.2.10"
+    dependsOn.addAll(listOf("compileJava", "compileKotlin", "processResources"))
+    archiveBaseName.set("usvm-jvm-spring-runner")
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    manifest {
+        attributes(
+            mapOf(
+                "Main-Class" to "bench.WebBenchKt",
+                "Premain-Class" to "org.usvm.jvm.concrete.agent.Agent",
+                "Can-Retransform-Classes" to "true",
+                "Can-Redefine-Classes" to "true",
+//                "Enable-Native-Access" to "ALL-UNNAMED",
+//                "Add-Opens" to addOpensPool.joinToString(" "),
+//                "Add-Exports" to addExportsPool.joinToString(" ")
+            )
+        )
+    }
+
+    configurations = listOf(project.configurations.runtimeClasspath.get())
+
+    mergeServiceFiles()
+    with(tasks.jar.get() as CopySpec)
+    println(this.outputs.files.joinToString(" ") { it.absolutePath })
+}
+
 
 tasks.register<JavaExec>("runWebBench") {
     mainClass.set("bench.WebBenchKt")
@@ -213,16 +409,20 @@ tasks.register<JavaExec>("runWebBench") {
         openPackage("java.base", "java.lang.annotation")
         openPackage("java.base", "java.lang.runtime")
         openPackage("java.base", "javax.crypto")
-        openPackage("jdk.zipfs", "jdk.nio.zipfs")
         openPackage("java.base", "java.nio.file.spi")
         openPackage("java.base", "jdk.internal.jrtfs")
+        openPackage("java.base", "sun.nio.ch")
+        openPackage("java.base", "sun.net.util")
+        openPackage("java.management", "javax.management")
+        openPackage("java.logging", "java.util.logging")
+        openPackage("java.desktop", "java.beans")
+        openPackage("java.xml", "com.sun.org.apache.xerces.internal.impl.xs")
+        openPackage("jdk.zipfs", "jdk.nio.zipfs")
         openPackage("java.instrument", "sun.instrument")
         openPackage("java.xml", "com.sun.xml.internal.stream")
         openPackage("java.xml", "com.sun.org.apache.xerces.internal.impl")
         openPackage("java.xml", "com.sun.org.apache.xerces.internal.utils")
         openPackage("java.sql", "java.sql")
-        openPackage("java.base", "sun.nio.ch")
-        openPackage("java.base", "sun.net.util")
         exportPackage("java.base", "jdk.internal.access.foreign")
         exportPackage("java.base", "sun.security.action")
         exportPackage("java.base", "sun.util.locale")
@@ -260,4 +460,12 @@ fun JavaExec.addEnvIfExists(envName: String, path: String) {
     }
 
     environment(envName, file.absolutePath)
+}
+
+publishing {
+    publications {
+        create<MavenPublication>("maven") {
+            from(components["java"])
+        }
+    }
 }
